# WillYouModYourSnail

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  PLAN.md  Preload.cmake  README.md  TODO.md  build.bat  build.sh  forge.config.js  icon.svg.import  package-lock.json  package.json  project.godot
.github/ISSUE_TEMPLATE/: BUG_REPORT.yml  config.yml
.github/workflows/: ci.yml
source/: Init.gd  Init.tscn  export_presets.cfg  icon.svg.import  project.godot
source/autoloads/: Globals.gd  Steam.gd  UndertaleModLib.gd  UserConfigFile.gd
source/image/: WYSMC.png.import  outline_menu_white_18dp.png.import
source/pages/: Setup.gd  Setup.tscn
src/: index.js  main.cpp
src/Assets/FontAwesome/: 088b6a2344.js
src/Assets/JSON/: Settings.json
src/Assets/JSON/Localization/: en_US.json  es_ES.json  shake_PEAR.json
src/Assets/JavaScript/: crash.js  preload.js
src/Assets/JavaScript/preloads/: GlobalPreloads.js  ModPagePreloads.js  OnboardingPreloads.js  SettingsPagePreloads.js  ToolsPagePreloads.js  UploadPagePreloads.js
src/Assets/Styles/: ColorScheme1.css  global.css
src/Classes/: Patcher.js  WYSMOD.js
src/Interface/: browse.html  crash.html  init.html  mods.html  onboarding.html  settings.html  template.html  tools.html  upload.html
src/classes/: Logger.cpp
